# rs

./: .env.example  .gitignore  AGENTS.md  README.md  issue_report.md  pyproject.toml  update.md
.hermes/plans/: agent-testing-overhaul.md  tool-registry-centralization.md
docs/plans/: 2026-05-30-quality-improvements.md
research_summarizer/: __init__.py  agent.py  cli.py
research_summarizer_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: trace_inspect.py
tests/: agent_test_utils.py  conftest.py  test_agent.py  test_tools.py
